--- a/Views/User/UserDashboard.cshtml
+++ b/Views/User/UserDashboard.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<RideRental.Models.Bike>
+﻿@model List<RideRental.Models.Bike>
 @{
     ViewData["Title"] = "Available Bikes";
 }
@@ -66,3 +66,9 @@
         </div>
     }
 </div>
+@if (ViewBag.Recommended != null && ((List<Bike>)ViewBag.Recommended).Any())
+{ 
+    @await Html.PartialAsync("~/Views/User/Recommended.cshtml", ViewBag.Recommended as List<Bike>)
+
+}
+
