Recommendation algorithm fix and rental requests return

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     <br />
                     <strong>Join <span class="text-dark">Online Bike Rental</span></strong> and explore your city <strong>your way!</strong>
                 </p>
-                <a href="/Account/Register" class="btn btn-success btn-lg mt-3 animate__animated animate__pulse animate__infinite">
+                <a href="/Account/Register" class="btn btn-success btn-lg mt-3 ">
                     <i class="bi bi-bicycle me-2"></i> Book Your Ride
                 </a>
             </div>
