--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <!-- Hero Section -->
-<div class="py-5 bg-white" id="hero">
+<div class="py-5 bg-white" id="hero" >
     <div class="container py-4">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-6 mb-4 mb-md-0 animate__animated animate__fadeInLeft text-dark">
@@ -13,19 +13,20 @@
                     <br />
                     <strong>Join <span class="text-dark">Online Bike Rental</span></strong> and explore your city <strong>your way!</strong>
                 </p>
-                <a href="/Account/Register" class="btn btn-success btn-lg mt-3 ">
+                <a href="/Account/Register" class="btn btn-success btn-lg mt-3">
                     <i class="bi bi-bicycle me-2"></i> Book Your Ride
                 </a>
             </div>
 
             <div class="col-md-5 text-center animate__animated animate__fadeInRight">
-                <div class="bg-white rounded ">
-                    <img src="~/uploads/bike.jpg" class="img-fluid rounded" alt="Bike Rental" style="max-height: 400px;" />
+                <div class="bg-white rounded">
+                    <img src="@Url.Content("~/uploads/bgbike.png")" class="img-fluid rounded" alt="Bike Rental" style="max-height: 400px;" />
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 
 <!-- Features Section -->
