--- a/Views/User/Recommended.cshtml
+++ b/Views/User/Recommended.cshtml
@@ -26,7 +26,8 @@ else
                             Power: @bike.Power<br />
                             Price: $@bike.RentalPricePerHour/hr
                         </p>
-                        <a asp-controller="Bikes" asp-action="UserDashboard" class="btn btn-outline-success w-100">View</a>
+                        <a asp-controller="Bikes" asp-action="Details" asp-route-id="@bike.BikeID" class="btn btn-outline-success w-100">View</a>
+
                     </div>
                 </div>
             </div>
