collaborative based on age and occupation of similar users

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-controller="Bikes" asp-action="Recommended">
+                                <a class="nav-link text-white" asp-controller="Bikes" asp-action="RecommendBySimilarUsers">
                                     <i class="bi bi-stars me-1"></i> Recommended
                                 </a>
                             </li>
