--- a/Views/User/Recommended.cshtml
+++ b/Views/User/Recommended.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<RideRental.Models.Bike>
 
 <h3 class="mt-4"><i class="bi bi-stars"></i> Recommended For You</h3>
-<p class="text-muted mb-3">Based on your preferences and rentals</p>
+<p class="text-muted mb-3">Based on similar Users</p>
 
 @if (!Model.Any())
 {
