Jaro Winkler fuzzy match

--- a/Views/User/Recommended.cshtml
+++ b/Views/User/Recommended.cshtml
@@ -24,7 +24,7 @@ else
                         <p class="card-text">
                             Category: @bike.Category<br />
                             Power: @bike.Power<br />
-                            Price: $@bike.RentalPricePerHour/hr
+                            Price: Rs.@bike.RentalPricePerHour/hr
                         </p>
                         <a asp-controller="Bikes" asp-action="Details" asp-route-id="@bike.BikeID" class="btn btn-outline-success w-100">View</a>
 
